2008-11-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_credits, avt_credits_up):
	optimization: just one line in buffer

2008-11-03  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (write_term): new function
	fix warnings

	* avatarsay.c: check value for chdir
	fix warnings

	* arch.c: always check value for read
	fix warnings
	
	* arch.c (arch_get_data):
	improved handling of read

2008-10-26  Andreas K. Foerster  <info@akfoerster.de>

	* configure (AVTVERSIONNR): new macro 
	avtterm.c (avtterm_start):
	use number-only-value for env-var AKFAVTTERM

2008-10-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_draw_balloon):
	when there is no avatar, put balloon at the top
	
	* avatarsay.c (avatar_command):
	new command: empty

2008-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (help, checkoptions):
	option -e reserved for different later use

2008-10-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_script):
	fix handling of initialisation

	* avatar.c (avt_draw_balloon):
	fix: update whole screen

2008-10-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.pas (BalloonSize, BalloonHeight, BalloonWidth):
	new functions

	* akfavatar.pas (AvatarImageFile, AvatarImageData, initializeAvatar):
	allow changing the avatar while running

2008-10-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (read_text_file): new function
	(handle_credits_command): use read_text_file

	* avatarsay.c (handle_width_command, handle_height_command)
	(handle_size_command): initialize if needed

2008-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avtterm_run):
	reject filedescriptors less than zero

	* avtterm.c (avtterm_start): code cleanup

2008-10-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (handle_title_command):
	remove leading whitespace

	* avtterm (escape_sequence, CSI_sequence):
	hooks for application keypad (not really supported yet)
