@@ -1,3 +1,8 @@
+2008-11-07  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c (avt_credits):
+	fix: print one last empty line to avoid streaks
+
 2008-11-05  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c (avt_credits, avt_credits_up):
